<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_page_bg">

        <Button
            android:id="@+id/button_flag_violation"
            android:layout_width="245dp"
            android:layout_height="55dp"
            android:background="@drawable/button_white_bg"
            android:text="@string/flag_violation"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <Button
            android:id="@+id/button_check_history"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="32dp"
            android:text="@string/check_history"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:background="@drawable/button_white_border_bg"
            app:layout_constraintEnd_toEndOf="@+id/button_flag_violation"
            app:layout_constraintStart_toStartOf="@+id/button_flag_violation"
            app:layout_constraintTop_toBottomOf="@+id/button_flag_violation" />

        <TextView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/traffic_ticketing"
            android:textColor="@color/white"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:gravity="center"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintBottom_toTopOf="@+id/button_flag_violation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:srcCompat="@drawable/line" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/line_thin" />

    </android.support.constraint.ConstraintLayout>





</FrameLayout>